--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,7 @@ privoxy_logdir: /var/log/privoxy
 privoxy_listen_addresses: 
     - localhost:8118
 privoxy_max_client_connections: 256
+privoxy_debug: 0
 
 # Package states: installed or latest
 privoxy_pkg_state: installed
